# trove

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  release-footer.md
.github/workflows/: ci.yml  release.yml
docs/: CNAME  app-mock.css  index.html  landing.css  landing.js  tweaks.js
src/: App.tsx  Launcher.tsx  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  index.rs  lib.rs  main.rs  model.rs  quickfind.rs  watch.rs
src/components/: CollectionMenu.tsx  Icons.tsx  SearchModal.tsx  ShortcutField.tsx  Sidebar.tsx  Topbar.tsx  UpdateBanner.tsx  VirtualGrid.tsx  cards.tsx  filters.tsx  virtual.test.ts  virtual.ts
src/data/: dataset.test.ts  dataset.ts  mock.ts  types.ts
src/lib/: store.test.ts  store.ts  tauri.ts  updater.ts
src/screens/: Collections.tsx  Creators.tsx  Detail.tsx  Favorites.tsx  Library.tsx  Search.tsx  Settings.tsx  Setup.tsx  Storage.tsx
src/styles/: app.css  launcher.css  theme.css
src/three/: Viewer.tsx  geometries.ts  loaders.ts  meshWorker.ts  thumbs.ts
